# orochi

./: Cargo.toml
board/: Cargo.toml
board/src/: incoming_board.rs  lib.rs  movegen.rs  useful_board.rs  zobrist.rs
combat_adapter/: Cargo.toml
combat_adapter/src/: lib.rs  main.rs
engine/: Cargo.toml
engine/src/: main.rs
eval/: Cargo.toml
eval/src/: area_eval.rs  lib.rs
minimax/: Cargo.toml
minimax/src/: lib.rs
perfttest/: Cargo.toml
treesearch/: Cargo.toml
treesearch/src/: lib.rs
tuner/: Cargo.toml  database.json
tuner/src/: main.rs
