[package]
name = "combat_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
board = {path = "../board"}
zstd = "0.12.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
