[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = { version = "0.6.20", features = ["json"] }
# tokio = { version = "1.33.0", features = ["full"] }
# serde = { version = "1.0.166", features = ["derive"] }
# toml = "0.7.5"
# board = {path ="../board"}
# serde_json = "1.0.103"
# eval = {path = "../eval"}
